--- a/Implementacion/TrabajoPatronesIS2/nbproject/private/private.properties
+++ b/Implementacion/TrabajoPatronesIS2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\34651\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\pmond\\AppData\\Roaming\\NetBeans\\20\\build.properties
