--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /Implementación/JavaApplication1/nbproject/private/
+/Implementacion/TrabajoPatronesIS2/nbproject/private/
+/Implementacion/TrabajoPatronesIS2/build/
