Actualización: Estados de Libro, Tipos de Usuario y añadido LibrarySystemTest
IMPORTANTE:
- Arreglar la clase de LibrarySystemTest
- Actualizar el diagrama UML
- Cuestonamiento del uso de iteradores

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Implementación/JavaApplication1/nbproject/private/
 /Implementacion/TrabajoPatronesIS2/nbproject/private/
 /Implementacion/TrabajoPatronesIS2/build/
+/Implementacion/TrabajoPatronesIS2/dist/
