--- a/Implementacion/TrabajoPatronesIS2/nbproject/project.properties
+++ b/Implementacion/TrabajoPatronesIS2/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TrabajoPatronesIS2
-main.class=trabajopatronesis2.TrabajoPatronesIS2
+main.class=trabajopatronesis2.LibrarySystemTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
